[tool.poetry]
name = "mediadownloaderPKG"
version = "0.1.0"
description = ""
authors = ["shift <fantasy_world4423-git@yahoo.co.jp>"]
license = "GNU Lesser General Public License v3.0"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.10.0"
cryptography = "^36.0.1"
emoji = "^2.2.0"
isort = "^5.12.0"
mock = "^5.0.1"
opencv-python = "^4.7.0.72"
pillow = "^9.4.0"
pixivpy3 = "^3.7.4"
plyer = "^2.1.0"
pycodestyle = "^2.8.0"
PySimpleGUI = "^4.60.4"
python = ">=3.9,<4.0"
requests = "^2.28.2"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]

[tool.isort]
line_length = 256
multi_line_output = 9

[tool.ruff]
organizeImports = false

[tool.ruff.lint]
ignore = ["F401", "F541", "F841"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
