[project]
name = "media-downloader"
version = "0.1.0"
description = "media downloader"
authors = [
    { name = "shift" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "coverage>=7.6.7",
    "cryptography>=43.0.3",
    "emoji>=2.14.0",
    "httpx>=0.27.2",
    "isort>=5.13.2",
    "mock>=5.1.0",
    "orjson>=3.10.11",
    "pillow>=11.0.0",
    "pixivpy3>=3.7.5",
    "plyer>=2.1.0",
    "pycodestyle>=2.12.1",
    "ruff>=0.8.0",
    "tkeasygui>=1.0.10",
    "xmltodict>=0.14.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
line_length = 119
multi_line_output = 9

[tool.ruff]
exclude = [
    "__pycache__",
    ".coveragerc",
    ".git",
    ".venv",
    "venv",
]
line-length = 119

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F"]
ignore = ["F401", "F541", "F841"]
preview = true

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
unittest = "python -m unittest"
coverage_html = {chain = ["coverage run --source . -m unittest discover", "coverage html"]}
copy_to_run = "./copy_to_run.bat"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/media_downloader"]
